--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
