--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^1.0.5",
     "next": "12.0.3",
     "react": "17.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "17.0.2",
     "react-rating-stars-component": "^2.2.0",
     "uniqid": "^5.4.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@types/react-datepicker": "^4.1.7",
     "@types/uniqid": "^5.3.1",
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
