--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-datepicker": "^4.3.0",
     "react-dom": "17.0.2",
     "react-rating-stars-component": "^2.2.0",
+    "react-responsive-modal": "^6.1.0",
     "reactjs-popup": "^2.0.5",
     "tailwind-scrollbar-hide": "^1.1.5",
     "uniqid": "^5.4.0"
